src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Hall2__c</fullName>
        <description>ケータリング用（ホール提出書類作成日）</description>
        <label>ホール提出書類・作成</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hall3__c</fullName>
        <description>ケータリング用（ホール提出書類提出日）</description>
        <label>ホール提出書類・提出</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HallReserve1__c</fullName>
        <description>ケータリング用（会場予約時間・始）</description>
        <label>会場予約時間　開始</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>6:30</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HallReserve2__c</fullName>
        <description>ケータリング用（会場予約時間・終）</description>
        <label>会場予約時間　終了</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiru01__c</fullName>
        <formula>IF ( Hiru__c = 1 &amp;&amp; (DATEVALUE(Departure__c) = DATEVALUE(EntryTime__c) ),1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Hiru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hiru__c</fullName>
        <formula>/* ご予約昼の太陽マークが表示する時刻を定義できる機能対応
IF (
      (
        ( 
          ISPICKVAL(ps__Field4__c, &quot;15:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;14:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;14:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;13:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;13:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;12:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;12:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;11:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;11:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;10:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;10:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;9:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;09:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;9:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;09:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;8:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;08:30&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;8:00&quot;) ||
          ISPICKVAL(ps__Field4__c, &quot;08:00&quot;) 
          )
      ), 1, 0
)
*/
/* 2019/08/15 「ご予約昼の太陽マークが表示する時刻定義」の文字数制限で「9:00~15:00」を10分刻みで設定することができる様に改善対応 BY zyz BEGIN 
IF ( CONTAINS($Setup.CommDefine__c.ps__LeadIsHiruKey__c , &quot;\&quot;&quot;+TEXT(Field4__c)+&quot;\&quot;&quot; ), 1, 0) 
*/ 
IF ( CONTAINS($Setup.CommDefine__c.LeadIsHiruKey__c , &quot;\&quot;&quot;+TEXT(Field4__c)+&quot;\&quot;&quot; ) || CONTAINS($Setup.CommDefine__c.LeadIsHiruKey1__c , &quot;\&quot;&quot;+TEXT(Field4__c)+&quot;\&quot;&quot; ), 1, 0) 
/* 2019/08/15 「ご予約昼の太陽マークが表示する時刻定義」の文字数制限で「9:00~15:00」を10分刻みで設定することができる様に改善対応 BY zyz END */</formula>
        <label>○</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JpCookCheckTime__c</fullName>
        <label>和食調理_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JpCookCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>和食調理_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JpCookChecker__c</fullName>
        <label>和食調理_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shimura</fullName>
                </value>
                <value>
                    <fullName>Taniguchi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kingakunebiki__c</fullName>
        <inlineHelpText>マイナス金額を入力してください、たとえば、&quot;-1000&quot;のように</inlineHelpText>
        <label>金額値引</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>言語</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>会場プラン</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LeadAccountIdCal__c</fullName>
        <formula>Relcontact__r.AccountId</formula>
        <label>取引先ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadIndexRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>予約インデックス</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>LeadIndexRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadIndexSubId__c</fullName>
        <externalId>true</externalId>
        <label>予約インデックスSUB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadInfo__c</fullName>
        <formula>IF (LeadIndexRef__c != null, CASESAFEID(LeadIndexRef__c) &amp; &quot;:&quot; &amp;LeadIndexSubId__c&amp; &quot;:&quot; &amp; TEXT(RoomGroupNo__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約連泊情報</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadPdfShopCode__c</fullName>
        <label>見積書指定店舗</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadReceiptDateFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <label>発行日付変更不可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadReceiptDate__c</fullName>
        <label>発行日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ManagerArrive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>幹事来館</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mans__c</fullName>
        <defaultValue>NULLVALUE ($Setup.CommDefine__c.BookingMansDef__c,0)</defaultValue>
        <inlineHelpText>ご予約の人数の内訳、男性の人数を入力してください。</inlineHelpText>
        <label>男性</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MealStyle__c</fullName>
        <label>お料理形式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>卓盛り</fullName>
                </value>
                <value>
                    <fullName>コース</fullName>
                </value>
                <value>
                    <fullName>会席</fullName>
                </value>
                <value>
                    <fullName>ビュッフェ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting1__c</fullName>
        <description>ケータリング用会議開始時間</description>
        <label>会議開始時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>6:30</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting2__c</fullName>
        <description>ケータリング用会議終了時間</description>
        <label>会議終了時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>6:30</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Morimongn__c</fullName>
        <formula>IF ( Morningfood__c = TRUE,  IF (  StayPersons__c   &gt;  0 , StayPersons__c- Childs__c  -  Field309__c , 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>朝食数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Morningfood__c</fullName>
        <defaultValue>false</defaultValue>
        <description>朝食をつける場合チェック！</description>
        <inlineHelpText>朝食7:30〜または8:30〜</inlineHelpText>
        <label>朝食</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Morningtime__c</fullName>
        <inlineHelpText>朝食時間を選択</inlineHelpText>
        <label>朝食時間</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Morningfood__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nights__c</fullName>
        <formula>IF ( ISPICKVAL(ReservedType__c, &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;) || ( DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c) &amp;&amp; (Femails__c + StayPersons__c + Mans__c) &lt;&gt; 0 ) || ( DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c) &amp;&amp; CONTAINS(Name, &quot;の方&quot;) &amp;&amp; (Femails__c + StayPersons__c + Mans__c) &lt;&gt; 0 ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>宿泊予約の判断は、まず予約タイプ、到着日と出発日かつ予約人数、到着日と出発日かつ予約人数かつ&quot;の方&quot;となる</inlineHelpText>
        <label>Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoCleanRoomFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋清掃不要の場合はチェックを入れてください。</inlineHelpText>
        <label>清掃不要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <displayFormat>J#{YYYY}{MM}{DD}-{0}</displayFormat>
        <externalId>true</externalId>
        <label>予約No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NumOfBus__c</fullName>
        <label>送迎バス_台数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldAgtCal__c</fullName>
        <formula>/* 2021/02/28 リアルAGTの予約かどうかの識別に親取引先を参照にする WGCH BEGIN */
/*
AND(
	(OR((TEXT(ps__SalesOfficeInfoRef__r.ps__AccountType__c) == &apos;旅行会社&apos; ), (TEXT(ps__SalesOfficeInfoRef__r.Parent.ps__AccountType__c) == &apos;旅行会社&apos;)))
	,
	(OR((TEXT(ps__SalesOfficeInfoRef__r.ps__SalesOfficeCompanyType__c) == &apos;リアル&apos;), (TEXT(ps__SalesOfficeInfoRef__r.Parent.ps__SalesOfficeCompanyType__c) == &apos;リアル&apos;)))
)
*/
IF (
	 $Setup.CommDefine__c.AGTReferToParentFlg__c &amp;&amp; NOT(ISNULL(SalesOfficeInfoRef__r.ParentId)) &amp;&amp; NOT(ISBLANK(SalesOfficeInfoRef__r.ParentId)),
		AND(
			TEXT(SalesOfficeInfoRef__r.Parent.AccountType__c) == &apos;旅行会社&apos;
			,
			TEXT(SalesOfficeInfoRef__r.Parent.SalesOfficeCompanyType__c) == &apos;リアル&apos;
		)
		,
		AND(
			(OR((TEXT(SalesOfficeInfoRef__r.AccountType__c) == &apos;旅行会社&apos; ), (TEXT(SalesOfficeInfoRef__r.Parent.AccountType__c) == &apos;旅行会社&apos;)))
			,
			(OR((TEXT(SalesOfficeInfoRef__r.SalesOfficeCompanyType__c) == &apos;リアル&apos;), (TEXT(SalesOfficeInfoRef__r.Parent.SalesOfficeCompanyType__c) == &apos;リアル&apos;)))
		)
)
/* 2021/02/28 リアルAGTの予約かどうかの識別に親取引先を参照にする WGCH END */</formula>
        <label>$リアルブロック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Older__c</fullName>
        <inlineHelpText>年齢層は何歳から何歳くらいまでのお客様でしょう。</inlineHelpText>
        <label>年齢層</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>２０代</fullName>
                </value>
                <value>
                    <fullName>３０代</fullName>
                </value>
                <value>
                    <fullName>４０代</fullName>
                </value>
                <value>
                    <fullName>５０代</fullName>
                </value>
                <value>
                    <fullName>６０代</fullName>
                </value>
                <value>
                    <fullName>７０代</fullName>
                </value>
                <value>
                    <fullName>８０代</fullName>
                </value>
                <value>
                    <fullName>９０代</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgCreateDate__c</fullName>
        <label>作成日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgCreateUser__c</fullName>
        <label>登録担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgRsvNo__c</fullName>
        <externalId>true</externalId>
        <label>予約№(旧)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgUpdateDate__c</fullName>
        <label>更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgUpdateUser__c</fullName>
        <label>更新担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OryourimeiX02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理1</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理1)</relationshipLabel>
        <relationshipName>R00N10000000qn0gEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherComment__c</fullName>
        <label>その他_コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherShopEditCheckFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>該当フラグはTRUEの場合、別店舗でも該当ご予約情報を編集可能</description>
        <label>別店舗から編集チェックフラグ(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Otherdoc__c</fullName>
        <inlineHelpText>予約の別紙の種類には、団体打ち合わせ表、法事打ち合わせ表、部屋割り表、詳細な指示書などあります。
これらの文書をスキャンし、アップロードして『ドキュメント』タブへのリンクを貼ってください。</inlineHelpText>
        <label>予約の別紙参照</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ParentLeadId__c</fullName>
        <label>小部屋作成元ID（システム用）</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <description>ケータリング専用項目（駐車場）</description>
        <label>駐車場</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party1__c</fullName>
        <description>ケータリング用パーティー開始時間</description>
        <label>パーティー開始時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party2__c</fullName>
        <description>ケータリング用パーティー終了時間</description>
        <label>パーティー終了時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartyFormal__c</fullName>
        <label>宴会形式</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyType__c</fullName>
        <label>宴会種別</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayConfirm__c</fullName>
        <description>ケータリング支払い関係（支払確認）</description>
        <label>支払確認</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PayDirect__c</fullName>
        <description>ケータリング支払い関係（請求指示）</description>
        <label>請求指示</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PayDuration__c</fullName>
        <label>支払期限・方法</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>支払い_日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaymentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>入金確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentWay__c</fullName>
        <label>支払い_方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>集金</fullName>
                </value>
                <value>
                    <fullName>振込</fullName>
                </value>
                <value>
                    <fullName>カード</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeriodInfo__c</fullName>
        <label>納期</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDetailSyncInfo__c</fullName>
        <description>該当予約のプラン項目を設定される場合、プラン明細情報設定情報がカスタムマイズの場合、カスタムマイズ情報は該当項目に格納する
Format: 商品ID,単価:商品ID,単価</description>
        <label>プラン明細個別設定情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanSycnFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>予約取込プランフラグ</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>